Fix size of title on smaller screen

--- a/_custom.scss
+++ b/_custom.scss
@@ -305,9 +305,9 @@ body.home{
 }
 
 @media (max-width: 841px){
-  .banner-page h1 {
+  .banner-org h1, .banner-com h1 {
     font-size: 30px;
-    margin-top: 80px;
+    margin-top: 85px;
   }
 }
 
